--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -34,12 +33,14 @@
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.lulisoft.sunshine.DetailActivity" />
+                android:value="com.lulisoft.sunshine.MainActivity" />
         </activity>
 
         <provider
             android:authorities="com.lulisoft.sunshine"
-            android:name=".data.WeatherProvider">
+            android:name=".data.WeatherProvider"
+            android:enabled="true"
+            android:exported="false">
         </provider>
 
     </application>
